update seo tags

--- a/contact/index.html
+++ b/contact/index.html
@@ -8,7 +8,7 @@
 
   <link rel="manifest" href="/manifest.json">
 
-  <title>React App</title>
+  <title>Contact Page - My Website</title>
   <style type="text/css">
     body {
       margin: 0;
@@ -89,7 +89,26 @@
       }
     }
   </style>
+  <meta name="description" content="This is the site description and if you are seeing this, this is from the server."
+    data-react-helmet="true">
+  <meta name="twitter:card" content="summary" data-react-helmet="true">
+  <meta name="twitter:site" content="@kay_kenshin" data-react-helmet="true">
+  <meta name="twitter:description"
+    content="This is the site description and if you are seeing this, this is from the server."
+    data-react-helmet="true">
+  <meta name="twitter:creator" content="@kay_kenshin" data-react-helmet="true">
+  <meta property="og:type" content="article" data-react-helmet="true">
+  <meta property="og:url" content="http://www.example.com/" data-react-helmet="true">
+  <meta property="og:description"
+    content="This is the site description and if you are seeing this, this is from the server."
+    data-react-helmet="true">
+  <meta property="og:site_name" content="Learn - Organization Dashboard" data-react-helmet="true">
+  <meta property="fb:admins" content="Facebook numeric ID" data-react-helmet="true">
   <script type="text/javascript" src="chrome-extension://ljhlidglcgcgjnhloklpphkialnknbgc/inject.js"></script>
+  <meta name="twitter:title" content="Contact Page - My Website" data-react-helmet="true">
+  <meta name="twitter:image" content="https://loremflickr.com/600/400/business?lock=3" data-react-helmet="true">
+  <meta property="og:title" content="Contact Page - My Website" data-react-helmet="true">
+  <meta property="og:image" content="https://loremflickr.com/600/400/business?lock=3" data-react-helmet="true">
 </head>
 
 <body data-gr-c-s-loaded="true" cz-shortcut-listen="true">
@@ -106,7 +125,7 @@
         </nav>
         <main>
           <div class="container">
-            <h2>Contact Us</h2><img src="https://loremflickr.com/600/400/puppy" alt="welcome" class="img">
+            <h2>Contact Us</h2><img src="https://loremflickr.com/600/400/business?lock=3" alt="welcome" class="img">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores sit, consectetur deleniti, molestias
               architecto vero error at iure officia rem voluptatum itaque a tempora. Neque laboriosam voluptatem
               dignissimos itaque error?</p>
@@ -121,8 +140,6 @@
       </div>
     </div>
   </div>
-
-
 
 </body>
 
