--- a/about/index.html
+++ b/about/index.html
@@ -5,21 +5,10 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#000000">
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-  <link rel="manifest" href="/manifest.json">
-  <!--
-      Notice the use of  in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  <title>React App</title>
+  <link rel="manifest" href="/manifest.json">
+
+  <title>About Page - My Website</title>
   <style type="text/css">
     body {
       margin: 0;
@@ -100,6 +89,26 @@
       }
     }
   </style>
+  <meta name="description" content="This is the site description and if you are seeing this, this is from the server."
+    data-react-helmet="true">
+  <meta name="twitter:card" content="summary" data-react-helmet="true">
+  <meta name="twitter:site" content="@kay_kenshin" data-react-helmet="true">
+  <meta name="twitter:description"
+    content="This is the site description and if you are seeing this, this is from the server."
+    data-react-helmet="true">
+  <meta name="twitter:creator" content="@kay_kenshin" data-react-helmet="true">
+  <meta property="og:type" content="article" data-react-helmet="true">
+  <meta property="og:url" content="http://www.example.com/" data-react-helmet="true">
+  <meta property="og:description"
+    content="This is the site description and if you are seeing this, this is from the server."
+    data-react-helmet="true">
+  <meta property="og:site_name" content="Learn - Organization Dashboard" data-react-helmet="true">
+  <meta property="fb:admins" content="Facebook numeric ID" data-react-helmet="true">
+  <script type="text/javascript" src="chrome-extension://ljhlidglcgcgjnhloklpphkialnknbgc/inject.js"></script>
+  <meta name="twitter:title" content="About Page - My Website" data-react-helmet="true">
+  <meta name="twitter:image" content="https://loremflickr.com/600/400/business?lock=2" data-react-helmet="true">
+  <meta property="og:title" content="About Page - My Website" data-react-helmet="true">
+  <meta property="og:image" content="https://loremflickr.com/600/400/business?lock=2" data-react-helmet="true">
 </head>
 
 <body data-gr-c-s-loaded="true" cz-shortcut-listen="true">
@@ -116,7 +125,7 @@
         </nav>
         <main>
           <div class="container">
-            <h2>About Us</h2><img src="https://loremflickr.com/600/400/people" alt="welcome" class="img">
+            <h2>About Us</h2><img src="https://loremflickr.com/600/400/business?lock=2" alt="welcome" class="img">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores sit, consectetur deleniti, molestias
               architecto vero error at iure officia rem voluptatum itaque a tempora. Neque laboriosam voluptatem
               dignissimos itaque error?</p>
